// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<p
  className="sc-MEQRl cwRqwa"
>
  Text
</p>
`;

exports[`Caption renders colors 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-MEQRl cwRqwa"
  >
    Defaul color is Bulma
  </p>
  <p
    className="sc-MEQRl yeASn"
    color="piccolo.100"
  >
    Piccolo
  </p>
  <p
    className="sc-MEQRl gRumhh"
    color="trunks.100"
  >
    Trunks
  </p>
  <p
    className="sc-MEQRl kvrOFv"
    color="krillin.100"
  >
    Krillin
  </p>
</div>
`;

exports[`Caption renders font-weight 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-MEQRl cwRqwa"
  >
    Defaul font-weight is regular
  </p>
  <p
    className="sc-MEQRl bKhKUA"
  >
    Font-weight is bold
  </p>
</div>
`;

exports[`Caption renders semantic tags 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-MEQRl cwRqwa"
  >
    Paragraph is a default tag
  </p>
  <span
    className="sc-MEQRl cwRqwa"
  >
    Span tag
  </span>
  <label
    className="sc-MEQRl cwRqwa"
  >
    Label tag
  </label>
</div>
`;

exports[`Caption renders sizes 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-MEQRl cwRqwa"
  >
    Defaul font-size is 16px
  </p>
  <p
    className="sc-MEQRl gRmjPx"
    size={24}
  >
    Size is 24px
  </p>
  <p
    className="sc-MEQRl gCHaRN"
    size={48}
  >
    Size is 48px
  </p>
</div>
`;

exports[`Caption renders text-align 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-MEQRl cwRqwa"
  >
    Text-align is not specified
  </p>
  <p
    className="sc-MEQRl cefnZJ"
  >
    Centered text
  </p>
  <p
    className="sc-MEQRl frMXDq"
  >
    Right alignment
  </p>
</div>
`;
